@@ -1594,6 +1594,10 @@ event.audit.added=User "{0}" created {1} with id {2}.
 event.audit.changed=User "{0}" changed {1} with id {2}.
 event.audit.deleted=User "{0}" deleted {1} with id {2}.
 event.audit.toggled=User "{0}" toggled {1} to enabled: {2}.
+event.audit.extended.added=User "{0}" created {1} - {2} with xid {3}.
+event.audit.extended.changed=User "{0}" changed {1} - {2} with xid {3}.
+event.audit.extended.deleted=User "{0}" deleted {1} - {2} with xid {3}.
+event.audit.extended.toggled=User "{0}" toggled {1} - {2} with xid {3}.
 event.audit.propertyList.0=
 event.audit.propertyList.1={0}
 event.audit.propertyList.2={0}{1}
