@@ -115,6 +115,13 @@ public class User extends AbstractVO<User> implements SetPointSource, HttpSessio
         this.passwordVersion = 1;
     }
 
+    /* (non-Javadoc)
+     * @see com.serotonin.m2m2.vo.AbstractVO#getXid()
+     */
+    @Override
+    public String getXid() {
+        return "N/A";
+    }
     /**
      * Used for various display purposes.
      */
